--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,7 @@ name: Build & Publish UNF ICS (KBH & Lyngby)
 
 on:
   schedule:
-    # Every 6 hours (UTC)
-    - cron: "0 */6 * * *"
+    - cron: "0 1,6,11,14,16,20 * * *"  # UTC: 01:00, 06:00, 11:00, 14:00, 16:00, 20:00
   workflow_dispatch: {}
 
 permissions:
