更新 publish.yml 中的最后更新时间格式，确保 UTC 时间正确显示于 index.html

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           mkdir -p dist
           dt=$(date "+%Y-%m-%d %H:%M:%S")
-          sed -i "s/最后更新时间:<span id=\"last-update\">.*<\\/span>/最后更新时间:<span id=\"last-update\">$dt<\\/span>/" index.html
+          sed -i "s|<span id=\"last-update-utc\">.*</span>|<span id=\"last-update-utc\">UTC: $dt</span>|" index.html
           cp index.html dist/
           
       - name: Generate ICS feeds (KBH & Lyngby)
