--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,11 @@ name: Build & Publish UNF ICS (KBH & Lyngby)
 
 on:
   workflow_dispatch: {}
+  push:
+    branches:
+      - main
   schedule:
-    - cron: "0 1,6,11,14,16,20 * * *"  # UTC: 01:00, 06:00, 11:00, 14:00, 16:00, 20:00
+    - cron: "10 1,6,11,14,16,20 * * *"  # UTC: 01:10, 06:10, 11:10, 14:10, 16:10, 20:10
 
 permissions:
   contents: read
