--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Show trigger type and run time
+        run: |
+          echo "触发类型: $GITHUB_EVENT_NAME"
+          echo "运行时间: $(date '+%Y-%m-%d %H:%M:%S')"
+      - name: Set workflow run title
+        run: |
+          echo "::group::设置运行标题"
+          if [ "$GITHUB_EVENT_NAME" = "schedule" ]; then
+            echo "::set-output name=run_title::定时触发 $(date '+%Y-%m-%d %H:%M:%S')"
+          elif [ "$GITHUB_EVENT_NAME" = "push" ]; then
+            echo "::set-output name=run_title::推送触发 $(date '+%Y-%m-%d %H:%M:%S')"
+          elif [ "$GITHUB_EVENT_NAME" = "workflow_dispatch" ]; then
+            echo "::set-output name=run_title::手动触发 $(date '+%Y-%m-%d %H:%M:%S')"
+          else
+            echo "::set-output name=run_title::其他触发 $(date '+%Y-%m-%d %H:%M:%S')"
+          fi
+          echo "::endgroup::"
       - name: Checkout
         uses: actions/checkout@v4
 
