在 publish.yml 中添加清理构建目录的步骤，并更新 index.html 以保持一致性

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,9 @@ jobs:
           echo "::endgroup::"
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Clean dist before build
+        run: |
+          rm -rf dist
 
       - name: Setup Python
         uses: actions/setup-python@v5
