--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,9 +39,6 @@ jobs:
           fi
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Clean dist before build
-        run: |
-          rm -rf dist
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -63,13 +60,6 @@ jobs:
             echo "Missing UNF_USER/UNF_PASS secrets."
             exit 1
           fi
-
-      - name: Update index.html with last update time
-        run: |
-          mkdir -p dist
-          dt=$(date "+%Y-%m-%d %H:%M:%S")
-          sed -i "s|<span id=\"last-update-utc\">.*</span>|<span id=\"last-update-utc\">UTC: $dt</span>|" index.html
-          cp index.html dist/
           
       - name: Generate ICS feeds (KBH & Lyngby)
         env:
@@ -78,6 +68,29 @@ jobs:
         run: |
           python unf_events_to_ics.py --out-dir dist --pages 5
           ls -lah dist
+
+      - name: Update index.html (time + file list)
+        run: |
+          set -e
+          dt=$(date -u "+%Y-%m-%d %H:%M:%S")
+          # 更新最后更新时间 (UTC)
+          sed -i "s|<span id=\"last-update-utc\">.*</span>|<span id=\"last-update-utc\">UTC: $dt</span>|" index.html
+          # 生成文件列表 (dist 下的文件)
+          {
+            echo "<table><thead><tr><th>文件</th><th>大小(bytes)</th><th>最后修改(UTC)</th></tr></thead><tbody>"
+            for f in dist/*; do
+              [ -f "$f" ] || continue
+              base=$(basename "$f")
+              size=$(stat -c %s "$f")
+              mtime=$(stat -c %Y "$f")
+              human=$(date -u -d "@$mtime" "+%Y-%m-%d %H:%M:%S UTC")
+              echo "<tr><td><a href=\"$base\">$base</a></td><td>$size</td><td>$human</td></tr>"
+            done
+            echo "</tbody></table>"
+          } > filelist.tmp
+          perl -0777 -i -pe 'my $r=do{local $/;open my $fh,"<","filelist.tmp";<$fh>}; s/<!-- FILE_LIST_START -->.*?<!-- FILE_LIST_END -->/<!-- FILE_LIST_START -->\n$r<!-- FILE_LIST_END -->/s' index.html
+          mkdir -p dist
+          cp index.html dist/
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
