--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,10 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ICS_PAGES: 4  # 可调：抓取页面数，减少可加速
+    outputs:
+      skip_deploy: ${{ steps.decide-skip.outputs.skip_deploy }}
     steps:
       - name: Show trigger type and run time
         run: |
@@ -37,18 +41,26 @@ jobs:
           else
             echo "run_title=其他触发 $(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
           fi
-      - name: Checkout
+      - name: Checkout (shallow)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-      - name: Setup Python
+      - name: Setup Python (with pip cache)
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: 'pip'
+          cache-dependency-path: 'requirements.txt'
 
       - name: Install deps
         run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 python-dateutil
+          pip install -r requirements.txt
+
+      - name: Clean dist
+        run: |
+          rm -rf dist
+          mkdir -p dist
 
       # Fail fast if secrets missing (never echo real values)
       - name: Check required secrets exist
@@ -66,10 +78,48 @@ jobs:
           UNF_USER: ${{ secrets.UNF_USER }}
           UNF_PASS: ${{ secrets.UNF_PASS }}
         run: |
-          python unf_events_to_ics.py --out-dir dist --pages 5
+          echo "使用页面数: ${ICS_PAGES}"
+          python unf_events_to_ics.py --out-dir dist --pages "$ICS_PAGES"
           ls -lah dist
 
+      - name: Decide skip (hash compare with currently published)
+        id: decide-skip
+        run: |
+          set -e
+          # 组合新生成 ICS 的内容哈希（按文件名排序保证稳定）
+          NEW_HASH=$(for f in $(ls dist/*.ics | sort); do sha256sum "$f"; done | awk '{print $1}' | tr -d '\n' | sha256sum | awk '{print $1}')
+          echo "New combined hash: $NEW_HASH"
+          BASE_URL="https://${GITHUB_REPOSITORY_OWNER}.github.io/${GITHUB_REPOSITORY#*/}"
+          # 抓取已发布（若存在）对应 ICS 文件内容
+          REMOTE_TMP="remote_ics_concat.tmp"
+          touch "$REMOTE_TMP"
+          MISSING=0
+          for f in $(ls dist/*.ics | sort); do
+            name=$(basename "$f")
+            url="$BASE_URL/$name"
+            echo "Fetching $url" >&2
+            if ! curl -fsSL "$url" >> "$REMOTE_TMP" 2>/dev/null; then
+              echo "Remote file missing: $url (treat as changed)" >&2
+              MISSING=1
+              break
+            fi
+          done
+          if [ $MISSING -eq 0 ]; then
+            OLD_HASH=$(sha256sum "$REMOTE_TMP" | awk '{print $1}')
+            echo "Old combined hash: $OLD_HASH"
+            if [ "$OLD_HASH" = "$NEW_HASH" ]; then
+              echo "ICS 内容无变化，标记跳过后续部署。"
+              echo "skip_deploy=true" >> $GITHUB_OUTPUT
+              echo "SKIP_DEPLOY=1" >> $GITHUB_ENV
+            else
+              echo "skip_deploy=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "skip_deploy=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Update index.html (time + file list)
+        if: steps.decide-skip.outputs.skip_deploy != 'true'
         run: |
           set -e
           dt=$(date -u "+%Y-%m-%d %H:%M:%S")
@@ -93,12 +143,14 @@ jobs:
           cp index.html dist/
 
       - name: Upload Pages artifact
+        if: steps.decide-skip.outputs.skip_deploy != 'true'
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist
 
   deploy:
     needs: build
+    if: needs.build.outputs.skip_deploy != 'true'
     runs-on: ubuntu-latest
     environment:
       name: github-pages
